
[metadata]
name = ipykernel
license_file = COPYING.md
version = attr: ipykernel._version.__version__
author = IPython Development Team
author_email = ipython-dev@scipy.org
license = BSD
description = IPython Kernel for Jupyter
keywords = Interactive, Interpreter, Shell, Web
url = https://ipython.org
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
platforms = Linux,, Mac, OS, X,, Windows

[options]
py_modules = ipykernel_launcher
install_requires =
    debugpy>=1.0
    ipython>=7.23.1
    traitlets>=5.1.0
    jupyter_client>=6.1.12
    tornado>=6.1
    matplotlib-inline>=0.1
    appnope;platform_system=="Darwin"
    psutil
    nest_asyncio
    packaging
python_requires = >=3.7
scripts =

[options.extras_require]
test =
    pytest>=6.0
    pytest-cov
    flaky
    ipyparallel
    pre-commit
    pytest-timeout

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    ipykernel/tests/*: B011, F841
